# trajectory_recorder

./: CMakeLists.txt  README.md  package.xml
config/: ur10e_topic_names.yaml
include/trajectory_recorder/: trajectory_recorder.h
launch/: trajectory_recorder.launch  ur10e_hw_trajectory_recorder.launch
records/: forza.csv  prova.csv  prova1.csv  salva.csv  trajectory_log_default.csv  ur_admittance_test_1.csv  ur_admittance_test_2.csv  ur_admittance_test_3.csv  ur_admittance_test_4.csv
src/trajectory_recorder/: trajectory_recorder.cpp  trajectory_recorder_Node.cpp
srv/: Load_Trajectory.srv
