<?xml version="1.0"?>
<package format="2">
  <name>trajectory_recorder</name>
  <version>0.0.0</version>
  <description>The trajectory_recorder package</description>

  <maintainer email="davideferr@unimore.it">Davide Ferrari</maintainer>

  <license>BSD-3</license>
    
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  
</package>
